# fatigue-stone

./: README.md
FareShare/: .env.example  .gitignore  SESSION_2026-04-12.md
FareShare/backend/: analyze.py  config.py  database.py  main.py  requirements.txt
FareShare/backend/models/: __init__.py  dispute.py
FareShare/backend/routers/: __init__.py  disputes.py
FareShare/backend/services/: __init__.py  comps.py  extractor.py  report.py
NEWsPaper/: .env.example  .gitignore  config.yaml  requirements.txt  snapshot_orchestrator.py  ui_dashboard.py
NEWsPaper/.streamlit/: config.toml
cardgame/css/: styles.css
hs-ev-machine/: .gitignore  README.md  ROADMAP.md
hs-ev-machine/hs_solver/: actions.py  card.py  combat.py  deck.py  rules.py  simulator.py  state.py
hs-ev-machine/scripts/: benchmark.py  fetch_cards.py
hs-ev-machine/tests/: conftest.py  test_actions.py  test_card.py  test_combat.py  test_deck.py  test_rules.py  test_simulator.py  test_state.py
mini_hearthstone/: Cargo.toml
mini_hearthstone/.cargo/: config.toml
mini_hearthstone/src/: ai.rs  card.rs  game.rs  main.rs  player.rs
